# todo-data

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tado.py
commands/: battery.py  setup.py  zones.py
core/: auth.py  client.py  storage.py
