[project]
name = "tado-data"
version = "0.1.0"
description = "CLI for reporting on Tado smart heating system status"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
tado = "tado:cli"

[tool.hatch.build.targets.wheel]
packages = ["core", "commands"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
